cmake_minimum_required (VERSION 3.20.0)

add_executable(listing_1.1 listing_1.1.cpp)
add_executable(listing_2.1 listing_2.1.cpp)
add_executable(listing_2.2 listing_2.2.cpp) 
add_executable(listing_2.3 listing_2.3.cpp)
add_executable(listing_2.4 listing_2.4.cpp)
add_executable(listing_2.5 listing_2.5.cpp)
add_executable(listing_2.6 listing_2.6.cpp)
add_executable(listing_2.7 listing_2.7.cpp)
add_executable(listing_2.8 listing_2.8.cpp)
add_executable(listing_3.1 listing_3.1.cpp)
add_executable(listing_3.2 listing_3.2.cpp)
add_executable(listing_3.3 listing_3.3.cpp)
add_executable(listing_3.4 listing_3.4.cpp)
add_executable(listing_3.5 listing_3.5.cpp)
add_executable(listing_3.6 listing_3.6.cpp)
add_executable(listing_3.7 listing_3.7.cpp)
add_executable(listing_3.8 listing_3.8.cpp)
add_executable(listing_3.9 listing_3.9.cpp)
add_executable(listing_3.10 listing_3.10.cpp)
add_executable(listing_3.11 listing_3.11.cpp)
add_executable(listing_3.12 listing_3.12.cpp)
add_executable(listing_3.13 listing_3.13.cpp)
add_executable(listing_4.1 listing_4.1.cpp)
add_executable(listing_4.2 listing_4.2.cpp)
add_executable(listing_4.3 listing_4.3.cpp)
add_executable(listing_4.4 listing_4.4.cpp)
add_executable(listing_4.5 listing_4.5.cpp)
add_executable(listing_4.6 listing_4.6.cpp)
add_executable(listing_4.7 listing_4.7.cpp)
add_executable(listing_4.8 listing_4.8.cpp)
add_executable(listing_4.9 listing_4.9.cpp)
add_executable(listing_4.10 listing_4.10.cpp)
add_executable(listing_4.11 listing_4.11.cpp)
add_executable(listing_4.12 listing_4.12.cpp)
add_executable(listing_4.13 listing_4.13.cpp)
add_executable(listing_4.14 listing_4.14.cpp)
add_executable(listing_4.15 listing_4.15.cpp)
add_executable(listing_4.16 listing_4.16.cpp)
add_executable(listing_4.17 listing_4.17.cpp)
add_executable(listing_4.18 listing_4.18.cpp)
add_executable(listing_4.19 listing_4.19.cpp)
add_executable(listing_4.20 listing_4.20.cpp)
add_executable(listing_4.21 listing_4.21.cpp)
add_executable(listing_4.22 listing_4.22.cpp)
add_executable(listing_4.23 listing_4.23.cpp)
add_executable(listing_4.24 listing_4.24.cpp)
add_executable(listing_4.25 listing_4.25.cpp)
add_executable(listing_4.26 listing_4.26.cpp)                                       
add_executable(listing_4.27 listing_4.27.cpp)
add_executable(listing_5.1 listing_5.1.cpp)     
add_executable(listing_5.2 listing_5.2.cpp)     
add_executable(listing_5.3 listing_5.3.cpp)                                             
add_executable(listing_5.4 listing_5.4.cpp)
add_executable(listing_5.5 listing_5.5.cpp)
add_executable(listing_5.6 listing_5.6.cpp)
add_executable(listing_5.7 listing_5.7.cpp)
add_executable(listing_5.8 listing_5.8.cpp)
add_executable(listing_5.9 listing_5.9.cpp)
add_executable(listing_5.10 listing_5.10.cpp)
add_executable(listing_5.11 listing_5.11.cpp)
add_executable(listing_5.12 listing_5.12.cpp)
add_executable(listing_5.13 listing_5.13.cpp)
add_executable(listing_6.1 listing_6.1.cpp)
add_executable(listing_6.2 listing_6.2.cpp)
add_executable(listing_6.3 listing_6.3.cpp)
add_executable(listing_6.4 listing_6.4.cpp)
add_executable(listing_6.5 listing_6.5.cpp)     
add_executable(listing_6.6 listing_6.6.cpp)
add_executable(listing_6.7 listing_6.7.cpp)
add_executable(listing_6.8 listing_6.8.cpp)
add_executable(listing_6.9 listing_6.9.cpp)
add_executable(listing_6.10 listing_6.10.cpp)                   
add_executable(listing_6.11 listing_6.11.cpp)
add_executable(listing_6.12 listing_6.12.cpp)
add_executable(listing_6.13 listing_6.13.cpp)
add_executable(listing_7.1 listing_7.1.cpp)
add_executable(listing_7.2 listing_7.2.cpp)
add_executable(listing_7.3 listing_7.3.cpp)
add_executable(listing_7.4 listing_7.4.cpp)
add_executable(listing_7.5 listing_7.5.cpp)
add_executable(listing_7.6 listing_7.6.cpp)
add_executable(listing_7.7 listing_7.7.cpp)
add_executable(listing_7.8 listing_7.8.cpp)
add_executable(listing_7.9 listing_7.9.cpp)
add_executable(listing_7.10 listing_7.10.cpp)
add_executable(listing_7.11 listing_7.11.cpp)
add_executable(listing_7.12 listing_7.12.cpp)
add_executable(listing_7.13 listing_7.13.cpp)
add_executable(listing_7.14 listing_7.14.cpp)
add_executable(listing_7.15 listing_7.15.cpp)
add_executable(listing_7.16 listing_7.16.cpp)
add_executable(listing_7.17 listing_7.17.cpp)
add_executable(listing_7.18 listing_7.18.cpp)
add_executable(listing_7.19 listing_7.19.cpp)
add_executable(listing_7.20 listing_7.20.cpp)
add_executable(listing_7.21 listing_7.21.cpp)
add_executable(listing_7.22 listing_7.22.cpp)
add_executable(listing_8.1 listing_8.1.cpp)                             
add_executable(listing_8.2 listing_8.2.cpp)             
add_executable(listing_8.3 listing_8.3.cpp)
add_executable(listing_8.4 listing_8.4.cpp)
add_executable(listing_8.5 listing_8.5.cpp)
add_executable(listing_8.6 listing_8.6.cpp)
add_executable(listing_8.7 listing_8.7.cpp)
add_executable(listing_8.8 listing_8.8.cpp)
add_executable(listing_8.9 listing_8.9.cpp)
add_executable(listing_8.10 listing_8.10.cpp)
add_executable(listing_8.11 listing_8.11.cpp)
add_executable(listing_8.12 listing_8.12.cpp)
add_executable(listing_8.13 listing_8.13.cpp)
add_executable(listing_9.1 listing_9.1.cpp)
add_executable(listing_9.2 listing_9.2.cpp)
add_executable(listing_9.3 listing_9.3.cpp)
add_executable(listing_9.4 listing_9.4.cpp)
add_executable(listing_9.5 listing_9.5.cpp)
add_executable(listing_9.6 listing_9.6.cpp)
add_executable(listing_9.7 listing_9.7.cpp)
add_executable(listing_9.8 listing_9.8.cpp)
add_executable(listing_9.9 listing_9.9.cpp)
add_executable(listing_9.10 listing_9.10.cpp)
add_executable(listing_9.11 listing_9.11.cpp)
add_executable(listing_9.12 listing_9.12.cpp)
add_executable(listing_9.13 listing_9.13.cpp)
add_executable(listing_10.1 listing_10.1.cpp)
add_executable(listing_10.2 listing_10.2.cpp)
add_executable(listing_10.3 listing_10.3.cpp)
add_executable(listing_11.1 listing_11.1.cpp)
add_executable(listing_a.1 listing_a.1.cpp)
add_executable(listing_a.2 listing_a.2.cpp)
add_executable(listing_a.3 listing_a.3.cpp)
add_executable(listing_a.4 listing_a.4.cpp)
add_executable(listing_c.1 listing_c.1.cpp) 
add_executable(listing_c.2 listing_c.2.cpp)
add_executable(listing_c.3 listing_c.3.cpp)
add_executable(listing_c.4 listing_c.4.cpp)
add_executable(listing_c.5 listing_c.5.cpp)
add_executable(listing_c.6 listing_c.6.cpp)
add_executable(listing_c.7 listing_c.7.cpp)
add_executable(listing_c.8 listing_c.8.cpp)
add_executable(listing_c.9 listing_c.9.cpp)                     
add_executable(listing_c.10 listing_c.10.cpp)